3.3:
    * GOST3412Kuz renamed to GOST3412Kuznezhik

3.2:
    34.13-2015 block cipher modes of operation implementations.

3.1:
    Fixed mypy stubs related to PEP247-successors.

3.0:
    * gost3411_94 renamed to gost341194
    * gost3411_2012 renamed and split to gost34112012256, gost34112012512
    * GOST34112012 split to GOST34112012256, GOST34112012512
    * gost3410.kek moved to separate gost3410_vko.kek_34102001
    * VKO GOST R 34.10-2012 appeared in gost3410_vko, with test vectors
    * 34.11-94 digest is reversed, to be compatible with HMAC and
      PBKDF2 test vectors describe in TC26 documents
    * 34.11-94 PBKDF2 test vectors added
    * gost3410.prv_unmarshal, gost3410.pub_marshal, gost3410.pub_unmarshal
      helpers added, removing the need of x509 module at all
    * gost3410.verify requires (pubX, pubY) tuple, instead of two separate
      pubX, pubY arguments
    * 34.11-94 based PBKDF2 function added

2.4:
    Fixed 34.13 mypy stub.

2.3:
    Typo and pylint fixes.

2.2:
    GOST R 34.13-2015 padding methods.

2.1:
    Documentation and supplementary files refactoring.

2.0:
    PEP-0247 compatible hashers and MAC.

1.0:
    * Ability to specify curve in pygost.x509 module
    * Ability to use 34.10-2012 in pygost.x509 functions

    Renamed classes and modules:

    * pygost.gost3410.SIZE_34100 -> pygost.gost3410.SIZE_3410_2001
    * pygost.gost3410.SIZE_34112 -> pygost.gost3410.SIZE_3410_2012
    * pygost.gost3411_12.GOST341112 -> pygost.gost3411_2012.GOST34112012

0.16:
    34.10-2012 TC26 curve parameters.

0.15:
    PEP-0484 static typing hints.

0.14:
    34.10-2012 workability fix.

0.13:
    Python3 compatibility.

0.11:
    GOST R 34.12-2015 Кузнечик (Kuznechik) implementation.

0.10:
    CryptoPro and GOST key wrapping, CryptoPro key meshing.