@@ -17,6 +17,7 @@ GOST is GOvernment STandard of Russian Federation (and Soviet Union).
 * 28147-89 CryptoPro key meshing for CFB mode (RFC 4357)
 * RFC 4491 (using GOST algorithms with X.509) compatibility helpers
 * GOST R 34.12-2015 128-bit block cipher Кузнечик (Kuznechik) (RFC 7801)
+* GOST R 34.12-2015 64-bit block cipher Магма (Magma)
 * GOST R 34.13-2015 padding methods and block cipher modes of operation
   (ECB, CTR, OFB, CBC, CFB, MAC)
 * PEP247-compatible hash/MAC functions
