@@ -4,3 +4,11 @@ class GOST3412Kuznechik(object):
     def encrypt(self, blk: bytes) -> bytes: ...
 
     def decrypt(self, blk: bytes) -> bytes: ...
+
+
+class GOST3412Magma(object):
+    def __init__(self, key: bytes) -> None: ...
+
+    def encrypt(self, blk: bytes) -> bytes: ...
+
+    def decrypt(self, blk: bytes) -> bytes: ...
