@@ -1,5 +1,6 @@
 3.3:
     * GOST3412Kuz renamed to GOST3412Kuznezhik
+    * GOST3412Magma implements GOST R 34.12-2015 Magma 64-bit block cipher
 
 3.2:
     34.13-2015 block cipher modes of operation implementations.
